Поменяла текст в вёрстке

--- a/index.html
+++ b/index.html
@@ -10,11 +10,9 @@
 <body>
 	<main class="main">
 		<h1 class="head" id="main-head">Lesson 1 JS git and github</h1>
-		
-		<ul>
-			
-		</ul>
-		
+		<div class="block">Разобраться с git могут все</div>
+		<button id="github">git and github</button>
+		<p class="text">Lorem ipsum dolor sit amet.</p>
 	</main>
 	<!-- <script src="js/dom_7.js"></script> -->
 </body>
