--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
 	<meta charset="UTF-8">
-	<title>JS</title>
+	<title>Lear git</title>
 	<link rel="stylesheet" href="css/style.css">
 	<!--Лучше подключать скрипт в вурху с добавлением атрибута defer-->
 	<script src="script.js" defer></script>
