Внесла изменение в html и js lesson 2

--- a/index.html
+++ b/index.html
@@ -2,17 +2,16 @@
 <html lang="ru">
 <head>
 	<meta charset="UTF-8">
-	<title>Lear git</title>
+	<title>урок 2</title>
 	<link rel="stylesheet" href="css/style.css">
-	<!--Лучше подключать скрипт в вурху с добавлением атрибута defer-->
-	<script src="script.js" defer></script>
+	<!--Лучше подключать скрипт в верху с добавлением атрибута defer-->
+	<script src="js/script.js" defer></script>
 </head>
 <body>
 	<main class="main">
-		<h1 class="head" id="main-head">Lesson 1 JS git and github</h1>
-		<div class="block">Разобраться с git могут все</div>
-		<button id="github">git and github</button>
-		<p class="text">Lorem ipsum dolor sit amet.</p>
+		<div class="container">
+			<h1 class="head" id="main-head">урок 2 Типы данных, операторы, методы и свойства</h1>
+		</div>
 	</main>
 	<!-- <script src="js/dom_7.js"></script> -->
 </body>
